goivy/conceptspace/y.output

state 0
	$accept: .top $end 

	CS_SYMBOL  shift 7
	CS_LPAREN  shift 4
	CS_TILDA  shift 6
	.  error

	top  goto 1
	expr  goto 2
	lit  goto 3
	atom  goto 5

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  expr.    (1)

	.  reduce 1 (src line 49)


state 3
	expr:  lit.    (2)

	.  reduce 2 (src line 56)


state 4
	expr:  CS_LPAREN.prod CS_RPAREN 
	expr:  CS_LPAREN.sum CS_RPAREN 

	CS_SYMBOL  shift 7
	CS_LPAREN  shift 4
	CS_TILDA  shift 6
	.  error

	expr  goto 10
	prod  goto 8
	sum  goto 9
	lit  goto 3
	atom  goto 5

state 5
	lit:  atom.    (10)

	.  reduce 10 (src line 107)


state 6
	lit:  CS_TILDA.atom 

	CS_SYMBOL  shift 7
	.  error

	atom  goto 11

state 7
	atom:  CS_SYMBOL.CS_LPAREN terms CS_RPAREN 

	CS_LPAREN  shift 12
	.  error


state 8
	expr:  CS_LPAREN prod.CS_RPAREN 
	prod:  prod.CS_TIMES expr 

	CS_RPAREN  shift 13
	CS_TIMES  shift 14
	.  error


state 9
	expr:  CS_LPAREN sum.CS_RPAREN 
	sum:  sum.CS_PLUS expr 

	CS_RPAREN  shift 15
	CS_PLUS  shift 16
	.  error


state 10
	prod:  expr.CS_TIMES expr 
	sum:  expr.CS_PLUS expr 

	CS_PLUS  shift 18
	CS_TIMES  shift 17
	.  error


state 11
	lit:  CS_TILDA atom.    (11)

	.  reduce 11 (src line 112)


state 12
	atom:  CS_SYMBOL CS_LPAREN.terms CS_RPAREN 
	terms: .    (6)

	CS_SYMBOL  shift 21
	.  reduce 6 (src line 84)

	term  goto 20
	terms  goto 19

state 13
	expr:  CS_LPAREN prod CS_RPAREN.    (3)

	.  reduce 3 (src line 61)


state 14
	prod:  prod CS_TIMES.expr 

	CS_SYMBOL  shift 7
	CS_LPAREN  shift 4
	CS_TILDA  shift 6
	.  error

	expr  goto 22
	lit  goto 3
	atom  goto 5

state 15
	expr:  CS_LPAREN sum CS_RPAREN.    (4)

	.  reduce 4 (src line 65)


state 16
	sum:  sum CS_PLUS.expr 

	CS_SYMBOL  shift 7
	CS_LPAREN  shift 4
	CS_TILDA  shift 6
	.  error

	expr  goto 23
	lit  goto 3
	atom  goto 5

state 17
	prod:  expr CS_TIMES.expr 

	CS_SYMBOL  shift 7
	CS_LPAREN  shift 4
	CS_TILDA  shift 6
	.  error

	expr  goto 24
	lit  goto 3
	atom  goto 5

state 18
	sum:  expr CS_PLUS.expr 

	CS_SYMBOL  shift 7
	CS_LPAREN  shift 4
	CS_TILDA  shift 6
	.  error

	expr  goto 25
	lit  goto 3
	atom  goto 5

state 19
	terms:  terms.CS_COMMA term 
	atom:  CS_SYMBOL CS_LPAREN terms.CS_RPAREN 

	CS_COMMA  shift 26
	CS_RPAREN  shift 27
	.  error


state 20
	terms:  term.    (7)

	.  reduce 7 (src line 89)


state 21
	term:  CS_SYMBOL.    (5)

	.  reduce 5 (src line 71)


state 22
	prod:  prod CS_TIMES expr.    (13)

	.  reduce 13 (src line 123)


state 23
	sum:  sum CS_PLUS expr.    (15)

	.  reduce 15 (src line 134)


state 24
	prod:  expr CS_TIMES expr.    (12)

	.  reduce 12 (src line 118)


state 25
	sum:  expr CS_PLUS expr.    (14)

	.  reduce 14 (src line 129)


state 26
	terms:  terms CS_COMMA.term 

	CS_SYMBOL  shift 21
	.  error

	term  goto 28

state 27
	atom:  CS_SYMBOL CS_LPAREN terms CS_RPAREN.    (9)

	.  reduce 9 (src line 99)


state 28
	terms:  terms CS_COMMA term.    (8)

	.  reduce 8 (src line 93)


12 terminals, 9 nonterminals
16 grammar rules, 29/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
58 working sets used
memory: parser 26/240000
13 extra closures
30 shift entries, 1 exceptions
15 goto entries
10 entries saved by goto default
Optimizer space used: output 29/240000
29 table entries, 0 zero
maximum spread: 12, maximum offset: 26
